central admin report done